--- a/1.css
+++ b/1.css
@@ -20,6 +20,22 @@ body{
 	margin-top:0.5em;
 }
 
+
+
+@media screen and (max-width:1024px) {
+.box1{
+	margin-left:0.25em;
+    width:19.8125em;
+    background-color:white;
+}
+
+.box2{
+    max-width:37.4375em;
+    min-width:1em;
+    background-color:white;
+}
+}
+
 @media screen and (max-width:414px) {
 .box1{
     width:21.3125em;
@@ -35,15 +51,3 @@ body{
 }
 }
 
-@media screen and (min-width:414px) and (max-width:1024px;){
-.box1{
-	margin-left:1.25em;
-    width:19.8125em;
-    background-color:white;
-}
-
-.box2{
-    width:1em;
-    background-color:white;
-}
-}
