--- a/1.css
+++ b/1.css
@@ -68,6 +68,15 @@ strong:hover{color:#fb0177;}
 	border-top: 2px solid #b2b2b2;
 }
 
+.box1-4{
+	width:20em;
+	height:7em;
+	margin-left:1em;
+	padding-top:0.8em;
+	padding-bottom:1em;
+	border-top: 2px solid #b2b2b2;
+}
+
 @media screen and (max-width:1920px) {
 .box1{
 	min-width:21.3125em;
