--- a/1.css
+++ b/1.css
@@ -73,7 +73,15 @@ strong:hover{color:#fb0177;}
 	height:7em;
 	margin-left:1em;
 	padding-top:0.8em;
-	padding-bottom:1em;
+	padding-bottom:2em;
+	border-top: 2px solid #b2b2b2;
+}
+
+.box1-5{
+	width:20em;
+	height:7em;
+	margin-left:1em;
+	padding-top:0.8em;
 	border-top: 2px solid #b2b2b2;
 }
 
