--- a/1.css
+++ b/1.css
@@ -47,7 +47,10 @@ strong:hover{color:#7a7a7a;}
     height: 13em;
     padding-left:6em;
     padding-top:2em;
+    transition: All 0.4s ease-in-out;
 }/*照片介绍*/
+.box1-1:hover {
+            transform: rotate(360deg);}
 
 .box1-2{
 	width:20em;
@@ -56,7 +59,13 @@ strong:hover{color:#7a7a7a;}
 	padding-top:0.8em;
 	padding-bottom:1em;
 	border-top: 2px solid #b2b2b2;
+	transition: All 0.4s ease-in-out;
 }/*基本信息*/
+
+.box1-2:hover{
+	transform: scale(2);
+	background-color:#bebdbd;
+}
 
 .box1-3{
 	width:20em;
@@ -65,7 +74,14 @@ strong:hover{color:#7a7a7a;}
 	padding-top:0.8em;
 	padding-bottom:1em;
 	border-top: 2px solid #b2b2b2;
+	transition: All 0.4s ease-in-out;
 }/*联系方式*/
+
+.box1-3:hover{
+	transform: rotate(360deg) scale(2);
+	background-color:#bebdbd;
+}
+
 
 .box1-4{
 	width:20em;
@@ -74,7 +90,14 @@ strong:hover{color:#7a7a7a;}
 	padding-top:0.8em;
 	padding-bottom:2em;
 	border-top: 2px solid #b2b2b2;
+	transition: All 0.4s ease-in-out;
 }/*技能*/
+
+.box1-4:hover{
+	transform:translate(300px,-400px);
+	background-color:#bebdbd;
+}
+
 
 .box1-5{
 	width:20em;
